<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title">Playlist maker</string>
    <string name="search"> Поиск </string>
    <string name="media_library"> Медиатека </string>
    <string name="settings"> Настройки </string>
    <string name="dark_theme"> Темная тема </string>
    <string name="share_app"> Поделиться приложением</string>
    <string name="share_app_via"> Поделиться приложением через</string>
    <string name="write_to_support"> Написать в поддержку</string>
    <string name="user_agreement"> Пользовательское соглашение </string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer</string>
    <string name="mail"> dolgikhanig@mail.ru </string>
    <string name="support_email_subject"> Сообщение разработчикам и разработчицам приложения Playlist Maker </string>
    <string name="support_email_body"> Спасибо разработчикам и разработчицам за крутое приложение! </string>
    <string name="share_app_message"> https://practicum.yandex.ru/profile/android-developer/ </string>
    <string name="no_internet_message"> Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету </string>
    <string name="update"> Обновить </string>
    <string name="no_result_message"> Ничего не нашлось </string>
    <string name="results_history"> Вы искали </string>
    <string name="clear_history"> Очистить историю </string>
    <string name="play_button_description"> Воспроизвести </string>
    <string name="add_button_description"> Добавить </string>
    <string name="favorite_button_description"> Избранное </string>
    <string name="duration"> Длительность </string>
    <string name="album"> Альбом </string>
    <string name="year"> Год </string>
    <string name="genre"> Жанр </string>
    <string name="country"> Страна </string>
    <string name="your_medialibrary_is_empty"> Ваша медиатека пуста </string>
    <string name="new_playlist"> Новый плейлист </string>
    <string name="no_created_playlist"> Вы не создали\nни одного плейлиста </string>
    <string name="favourites"> Избранные треки </string>
    <string name="playlists"> Плейлисты </string>
    <string name="error_network_connection">Проверьте подключение к интернету</string>
    <string name="error_server">Ошибка сервера (код %d)</string>
    <string name="error_unknown">Неизвестная ошибка</string>
    <string name="name_new_playlist">Название</string>
    <string name="description"> Описание </string>
    <string name="create"> Создать </string>
    <string name="exit_dialog_title">Завершить создание плейлиста?</string>
    <string name="exit_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="exit">Завершить</string>
    <string name="playlist_created">Плейлист создан</string>
    <string name="playlist_name_required">Введите название плейлиста</string>
    <string name="playlist_save_error">Ошибка при создании плейлиста</string>
    <plurals name="tracks_count">
        <item quantity="one">%d track</item>
        <item quantity="other">%d tracks</item>
    </plurals>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="no_playlist">Не удалось загрузить плейлисты</string>
    <string name="track_in_playlist">Добавлено в плейлист %s</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист  %s</string>
    <string name="error">Ошибка: %s</string>
    <string name="want_to_delete">Хотите удалить трек?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="want_to_delete_playlist">Хотите удалить плейлист?</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="playlist_edited">Плейлист отредактирован</string>
</resources>