<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:orientation="horizontal"
        android:background="@color/white"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="@dimen/padding_standard"
            android:layout_marginBottom="@dimen/padding_standard"
            android:layout_marginStart="@dimen/padding_standard"
            android:src="@drawable/vector"
            app:tint="@color/black_for_settings" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/settings"
            android:textColor="@color/black_for_settings"
            android:textSize="@dimen/text_size_large"
            android:gravity="start|center"
            android:layout_marginStart="24dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginTop="@dimen/margin_top"
        android:backgroundTint="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:padding="@dimen/padding_standard"
            android:text="@string/dark_theme"
            android:textColor="@color/black_for_other"
            android:textSize="@dimen/text_size_medium"
            android:layout_weight="1"
            android:width="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:paddingEnd="@dimen/margin_start"
            app:thumbTint="@color/switch_thumb_inactive_color"
            app:trackTint="@color/switch_track_inactive_color"
            tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:backgroundTint="@color/white"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_standard"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/share_app"
            android:textColor="@color/black_for_other"
            android:textSize="@dimen/text_size_medium"
            android:gravity="start|center_vertical"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share"
            android:layout_marginStart="@dimen/margin_start"
            app:tint="@color/grey" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:backgroundTint="@color/white"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_standard"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/write_to_support"
            android:textColor="@color/black_for_other"
            android:textSize="@dimen/text_size_medium"
            android:gravity="start|center_vertical"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/support"
            android:layout_marginStart="@dimen/margin_start"
            app:tint="@color/grey" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:backgroundTint="@color/white"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_standard"
        android:clickable="true"
        android:focusable="true" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/user_agreement"
            android:textColor="@color/black_for_other"
            android:textSize="@dimen/text_size_medium"
            android:gravity="start|center_vertical"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/agreement"
            android:layout_marginStart="@dimen/margin_start"
            app:tint="@color/grey" />
    </LinearLayout>

</LinearLayout>
